Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>OpenWRT sftp-bittorrent guide by matthewtraughber</title>
+    <meta name="description" content="OpenWRT sftp-bittorrent guide : Guide to create an OpenWRT SFTP &amp; BitTorrent server">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>OpenWRT sftp-bittorrent guide</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>OpenWRT sftp-bittorrent guide</h1>
-        <p>Guide to create an OpenWRT SFTP &amp; BitTorrent server</p>
 
-        <p class="view"><a href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide">View the Project on GitHub <small>matthewtraughber/openwrt_sftp-bittorrent_guide</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide">View on GitHub</a>
 
+          <h1 id="project_title">OpenWRT sftp-bittorrent guide</h1>
+          <h2 id="project_tagline">Guide to create an OpenWRT SFTP &amp; BitTorrent server</h2>
 
-        <ul>
-          <li><a href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/matthewtraughber/openwrt_sftp-bittorrent_guide/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="openwrt-sftp--bittorrent-server" class="anchor" href="#openwrt-sftp--bittorrent-server" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OpenWRT SFTP &amp; BitTorrent server</h1>
 
@@ -505,12 +508,17 @@ force directory mode = 0775</pre></div>
 
 <p>I'll add additional information (and potentially some media of the finished product) in the future. Questions or found a bug? Email me at <a href="mailto:me@matthewtraughber.com">me@matthewtraughber.com</a> or create an issue or pull request.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/matthewtraughber">matthewtraughber</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">OpenWRT sftp-bittorrent guide maintained by <a href="https://github.com/matthewtraughber">matthewtraughber</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
